Changed file path

--- a/project/BiLTSM.ipynb
+++ b/project/BiLTSM.ipynb
@@ -275,15 +275,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3039e4ea-4d10-43c4-b540-016307edf68b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load the three datasets\n",
-    "df_cleaned_1 = pd.read_csv('review_dataset/Preprocessed_Dataset_1.csv')\n",
-    "df_cleaned_2 = pd.read_csv('review_dataset/Preprocessed_Dataset_2.csv')\n",
-    "df_cleaned_3 = pd.read_csv('review_dataset/Preprocessed_Dataset_3.csv')\n",
+    "df_cleaned_1 = pd.read_csv('Preprocessed_Dataset_1.csv')\n",
+    "df_cleaned_2 = pd.read_csv('Preprocessed_Dataset_2.csv')\n",
+    "df_cleaned_3 = pd.read_csv('Preprocessed_Dataset_3.csv')\n",
     "\n",
     "df_cleaned_2.rename(columns={'label': 'target'}, inplace=True)"
    ]
